# azure-ml-playground

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  destroy.sh  environment.yml  pyproject.toml  requirements.txt  setup.sh
configuration/: blob_datastore.yml  conda_environment.yml  destroy.sh  pipeline.yml  prepare_data.yml  setup.sh  split.yml  train.yml
configure-cli/: blob_datastore.yml  destroy.sh  docker_environment.yml  setup.sh
configure-sdk/: setup.py
f1_data_predictions/: add_data.py  pipeline.yml  prepare_data.yml  run_pipeline.py  split.yml  train.yml  utils.py
f1_data_predictions/prepare_data/: prepare_data.py
f1_data_predictions/rai/: rai.py
f1_data_predictions/split/: split.py
f1_data_predictions/train/: train.py
notebooks/: EDA.ipynb
scripts/: add_data.py  utils.py
