[tool.poetry]
name = "f1-data-predictions"
version = "0.1.0"
description = ""
authors = ["Timo van Niedek <timovanniedek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fsspec = "^2024.6.1"
scikit-learn = "^1.5.1"
typer = "^0.12.4"
mlflow = "^2.15.1"
python-dotenv = "^1.0.1"
azure-ai-ml = "^1.19.0"
azureml-mlflow = "^1.57.0"
azure-common = "^1.1.28"
azure-identity = "^1.17.1"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
jupyter = "^1.0.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
